--- a/index.html
+++ b/index.html
@@ -44,6 +44,127 @@
         [DEPOUILLEMENT] Déplace toutes les cartes de votre main vers la Cour
     -->
 
+    <header>
+        <section class="header__cookies">Test</section>
+        <section class="header__nav">GAME PARLOR</section>
+    </header>
+    <main class="board">
+        <div class="board__start">
+            <button class="startBtn" onclick="start()">Commencer</button>
+        </div>
+        <div class="board__remain">
+            <h1 class="board__remain--title">Cartes restantes</h1>
+            <span class="board__remain--counter"></span>
+        </div>
+        <div class="board__infoCard">
+            <!-- ... -->
+        </div>
+        <div class="board__pot">
+            <div class="board__pot--area">
+                <div class="board__pot--cards">
+                    <div class="card1"></div>
+                </div>
+                <div class="board__pot--cards">
+                    <div class="card2"></div>
+                </div>
+                <div class="board__pot--cards">
+                    <div class="card3"></div>
+                </div>
+                <div class="board__pot--cards">
+                    <div class="card4"></div>
+                </div>
+                <div class="board__pot--cards">
+                    <div class="card5"></div>
+                </div>
+                <div class="board__pot--cards">
+                    <div class="card6"></div>
+                </div>
+                <div class="board__pot--cards">
+                    <div class="card7"></div>
+                </div>
+            </div>
+        </div>
+        <div class="board__players">
+            <div class="board__player1">
+                <div class="board__player--avatar">
+                    <div class="profile"></div>
+                </div>
+                <div class="board__player--area">
+                    <div class="board__player--cards">
+                        <div class="slot1"></div>
+                    </div>
+                    <div class="board__player--cards">
+                        <div class="slot2"></div>
+                    </div>
+                    <div class="board__player--cards">
+                        <div class="slot3"></div>
+                    </div>
+                </div>
+                <div class="board__player1--hand">
+                    <div class="cardHand"></div>
+                </div>
+            </div>
+            <div class="board__player2">
+                <div class="board__player--avatar">
+                    <div class="profile"></div>
+                </div>
+                <div class="board__player--area">
+                    <div class="board__player--cards">
+                        <div class="slot4"></div>
+                    </div>
+                    <div class="board__player--cards">
+                        <div class="slot5"></div>
+                    </div>
+                    <div class="board__player--cards">
+                        <div class="slot6"></div>
+                    </div>
+                </div>
+                <div class="board__player2--hand">
+                    <div class="cardHand"></div>
+                </div>
+            </div>
+            <div class="board__player3">
+                <div class="board__player--avatar">
+                    <div class="profile"></div>
+                </div>
+                <div class="board__player--area">
+                    <div class="board__player--cards">
+                        <div class="slot7"></div>
+                    </div>
+                    <div class="board__player--cards">
+                        <div class="slot8"></div>
+                    </div>
+                    <div class="board__player--cards">
+                        <div class="slot9"></div>
+                    </div>
+                </div>
+                <div class="board__player3--hand">
+                    <div class="cardHand"></div>
+                </div>
+            </div>
+            <div class="board__player4">
+                <div class="board__player--avatar">
+                    <div class="profile"></div>
+                </div>
+                <div class="board__player--area">
+                    <div class="board__player--cards">
+                        <div class="slot10"></div>
+                    </div>
+                    <div class="board__player--cards">
+                        <div class="slot11"></div>
+                    </div>
+                    <div class="board__player--cards">
+                        <div class="slot12"></div>
+                    </div>
+                </div>
+                <div class="board__player3--hand">
+                    <div class="cardHand"></div>
+                </div>
+            </div>
+            <button class="test" onclick='drawCard()'>Test</button>
+        </div>
+    </main>
+    <footer>All Rights Reserved © SQUARE ENIX</footer>
 
     <script src="./app.js"></script>
 </body>
