player board + draw cards (algorythm 0.1)

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
                     </div>
                 </div>
                 <div class="board__player1--hand">
-                    <div class="cardHand"></div>
+                    <div class="cardHand1"></div>
+                    <div class="cardHand2"></div>
+                    <div class="cardHand3"></div>
                 </div>
             </div>
             <div class="board__player2">
